# music-player

./: CMakeLists.txt  README.md  shell.nix
src/: main.cpp
src/mpv_backend/: CMakeLists.txt  player.cpp  player.hpp
